# Cold-Diffusion-Models

./: .gitignore  Untitled.ipynb  generate.py  pyproject.toml  train.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
conf/: config.yaml
conf/dataset/: base_dataset.yaml  dataset_celebA128.yaml  dataset_celebA128_scitas.yaml  dataset_remixing_local.yaml  dataset_remixing_scitas.yaml
conf/generator/: base_generator.yaml  generator.yaml
conf/trainer/: base_trainer.yaml  trainer_blur.yaml  trainer_blur_scitas.yaml  trainer_defading.yaml  trainer_denoise.yaml  trainer_remixing.yaml  trainer_remixing_local.yaml  trainer_remixing_scitas.yaml
generators/: base_generator.py  generator.py
models/: Unet.py  Unet_bis.py
trainers/: base_trainer.py  deblurring_diffusion_pytorch.py  defading_diffusion_gaussian.py  demixing_diffusion_pytorch.py  denoising_diffusion_pytorch.py  main_trainer.py  masking_diffusion.py
utils_metrics/: fid_score.py  utils.py
