[tool.poetry]
name = "cold-diffusion-models"
version = "0.1.0"
description = ""
authors = ["bhacquin"]

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.12.1"
torchvision = "^0.13.1"
numpy = "^1.23.3"
scipy = "^1.9.1"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
