[tool.poetry]
name = "cold-diffusion-models"
version = "0.1.0"
description = ""
authors = ["bhacquin"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = "^1.12.1"
torchvision = "^0.13.1"
numpy = "^1.23.3"
scipy = "^1.9.1"
tqdm = "^4.64.1"
comet-ml = "^3.31.14"
einops = "^0.4.1"
torchgeometry = "^0.1.2"
matplotlib = "^3.6.0"
sklearn = "^0.0"
hydra-core = "^1.1.0"
Hydra = "^2.5"
submitit = "^1.4.5"
tensorboard = "^2.10.1"
pytorch-msssim = "^0.2.1"
clearml = "^1.7.0"
wandb = "^0.13.3"
opencv-python = "^4.6.0.66"
imageio = "^2.22.0"
apex = "^0.9.10.dev0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poethepoet = "^0.10.0"
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]

black = "black ."
isort = "isort ."
check = ['isort', 'black']

deblur-local = "torchrun --standalone --nnodes=1 --nproc_per_node=4 -m train dataset=dataset_celebA128 trainer=trainer_blur"
defade-local = "torchrun --standalone --nnodes=1 --nproc_per_node=4 -m train dataset=dataset_celebA128 trainer=trainer_defading"
deblur-scitas = "python -m train dataset=dataset_celebA128_scitas trainer=trainer_blur_scitas"
demix-local = "torchrun --standalone --nnodes=1 --nproc_per_node=4 -m train dataset=dataset_remixing_local trainer=trainer_remixing_local"